hphp/hack/test/typecheck/control_flow/do_def_after_break.php.exp
File "do_def_after_break.php", line 10, characters 10-11:
Variable $x is undefined, or not always defined (did you mean $b instead?) (Naming[2050])
